# FalconMind

./: .gitignore  README.md
FalconMindSDK/: 3rd_README.md  CMakeLists.txt  CMakeLists_dependency_notes.txt  NODEFACTORY_COMPILATION_FIX.md  README_DEPENDENCIES.md  build-all.sh  detectors_test.yaml
FalconMindSDK/3rd/httplib-build/: CTestTestfile.cmake
FalconMindSDK/3rd/httplib-subbuild/: CMakeLists.txt
FalconMindSDK/3rd/pybind11-build/: CTestTestfile.cmake
FalconMindSDK/3rd/pybind11-subbuild/: CMakeLists.txt
FalconMindSDK/Doc/: FLOW_EXECUTOR_COMPLETE_IMPLEMENTATION.md  FLOW_EXECUTOR_IMPLEMENTATION.md  MODEL_ZOO.md  PERFORMANCE_BENCHMARK_REPORT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_STAGE2_REPORT.md  PERFORMANCE_OPTIMIZATION_STAGE3_REPORT.md  PERFORMANCE_OPTIMIZATION_STAGE4_REPORT.md  PERFORMANCE_OPTIMIZATION_STAGE5_REPORT.md  SDK_IMPLEMENTATION_PLAN.md  SDK_UNIMPLEMENTED.md
FalconMindSDK/NodeAgent/: CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_SUMMARY.md  OPTIMIZATION_LOG.md  README.md  TEST_REPORT.md  TEST_SUMMARY.md  WORK_PLAN.md
FalconMindSDK/NodeAgent/demo/: README_nodeagent_demo.md  cluster_center_mock.cpp  nodeagent_demo_main.cpp  run_tests.sh  test_downlink_demo.cpp  test_json_parsing.cpp  test_telemetry_flow.cpp
FalconMindSDK/NodeAgent/docs/: ACK_RESPONSE_GUIDE.md  ERROR_HANDLING_GUIDE.md  JSON_UPGRADE_NOTES.md  Protocol_Upgrade_Plan.md  UNIT_TESTING_GUIDE.md
FalconMindSDK/NodeAgent/include/nodeagent/: CommandHandler.h  DownlinkClient.h  ErrorCodes.h  ErrorStatistics.h  FlowHandler.h  IDownlinkClient.h  IUplinkClient.h  Logger.h  MessageAck.h  MissionHandler.h  MqttDownlinkClient.h  MqttUplinkClient.h  MultiUavManager.h  NodeAgent.h  ReconnectManager.h  UplinkClient.h
FalconMindSDK/NodeAgent/src/: CommandHandler.cpp  DownlinkClient.cpp  ErrorStatistics.cpp  FlowHandler.cpp  Logger.cpp  MessageAck.cpp  MissionHandler.cpp  MqttDownlinkClient.cpp  MqttUplinkClient.cpp  MultiUavManager.cpp  NodeAgent.cpp  ReconnectManager.cpp  UplinkClient.cpp
FalconMindSDK/NodeAgent/tests/: command_handler_tests.cpp  error_statistics_tests.cpp  flow_handler_integration_tests.cpp  logger_tests.cpp  message_ack_tests.cpp  mission_handler_tests.cpp  multi_uav_tests.cpp  reconnect_manager_tests.cpp  unit_tests.cpp
FalconMindSDK/demo/: README_behavior_tree_flight_demo.md  README_camera_detection_demo.md  README_detector_config_demo.md  README_flight_demo.md  README_pipeline_test.md  README_search_mission_demo.md  README_telemetry_demo.md  README_tracking_demo.md  TestNodes.cpp  TestNodes.h  behavior_tree_flight_demo_main.cpp  camera_detection_demo_main.cpp  detector_config_demo_main.cpp  detectors_demo.yaml  flight_demo_main.cpp  pipeline_test_main.cpp  search_mission_demo_main.cpp  telemetry_demo_main.cpp  tracking_demo_main.cpp
FalconMindSDK/examples/: README.md  build.sh  run-qemu-test.sh  run-tests.sh  upload.sh
FalconMindSDK/examples/01_pipeline_basic/: README.md
FalconMindSDK/examples/01_pipeline_basic/rk3576/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/01_pipeline_basic/rk3588/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/01_pipeline_basic/rv1126b/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/01_pipeline_basic/tests/: build_all.sh  build_rk3576.sh  build_rk3588.sh  build_rv1126b.sh  build_x86.sh
FalconMindSDK/examples/01_pipeline_basic/x86/: CMakeLists.txt
FalconMindSDK/examples/02_node_factory/: README.md
FalconMindSDK/examples/02_node_factory/rk3576/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/02_node_factory/rk3588/: CMakeLists.txt
FalconMindSDK/examples/02_node_factory/rv1126b/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/02_node_factory/tests/: build_all.sh  build_rk3576.sh  build_rk3588.sh  build_rv1126b.sh  build_x86.sh
FalconMindSDK/examples/02_node_factory/x86/: CMakeLists.txt
FalconMindSDK/examples/03_pad_data_transfer/: README.md
FalconMindSDK/examples/03_pad_data_transfer/rk3576/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/03_pad_data_transfer/rk3588/: CMakeLists.txt
FalconMindSDK/examples/03_pad_data_transfer/rv1126b/: CMakeLists.txt  toolchain.cmake
FalconMindSDK/examples/03_pad_data_transfer/tests/: build_all.sh  build_rk3576.sh  build_rk3588.sh  build_rv1126b.sh  build_x86.sh
FalconMindSDK/examples/03_pad_data_transfer/x86/: CMakeLists.txt
FalconMindSDK/examples/04_bus_messaging/: README.md
FalconMindSDK/examples/05_flow_executor/: README.md
FalconMindSDK/examples/qemu/: README.md
FalconMindSDK/proto/: slam_service.proto
FalconMindSDK/python/: falconmind_sdk.cpp
FalconMindSDK/scripts/: download_models.sh  run_tests.sh
FalconMindSDK/src/c_api/: falconmind_sdk_c_api.cpp
FalconMindSDK/src/cluster/: ClusterStateSourceNode.cpp
FalconMindSDK/src/core/: Bus.cpp  Caps.cpp  FlowExecutor.cpp  Node.cpp  NodeFactory.cpp  Pad.cpp  Pipeline.cpp
FalconMindSDK/src/flight/: FlightConnectionService.cpp  FlightNodes.cpp
FalconMindSDK/src/mission/: BehaviorTree.cpp  EventReporterNode.cpp  SearchMissionAction.cpp  SearchPathPlannerNode.cpp
FalconMindSDK/src/perception/: DetectionResultPacket.cpp  DetectorConfigLoader.cpp  DummyDetectionNode.cpp  EnvironmentDetectionNode.cpp  LidarSlamNode.cpp  LowLightAdaptationNode.cpp  OnnxRuntimeDetectorBackend.cpp  PerceptionPluginManager.cpp  RknnDetectorBackend.cpp  SimpleTrackerBackend.cpp  SlamServiceClientFromFile.cpp  SortTrackerBackend.cpp  TensorRtDetectorBackend.cpp  TrackingTransformNode.cpp  VisualSlamNode.cpp  YoloPrePostProcess.cpp
FalconMindSDK/src/sensors/: CameraSourceNode.cpp  GnssSourceNode.cpp  ImuSourceNode.cpp  LidarSourceNode.cpp
FalconMindSDK/src/telemetry/: TelemetryPublisher.cpp
FalconMindSDK/tests/: core_pipeline_tests.cpp  test_detection_result_packet.cpp  test_flow_executor.cpp  test_flow_executor_e2e.cpp  test_flow_executor_performance.cpp  test_node_factory.cpp  test_performance_benchmark.cpp  test_pipeline_link.cpp  test_simple_tracker_backend.cpp  test_yolo_pre_post_process.cpp
FalconMindSDK/toolchain/: aarch64-linux-gnu.cmake
(+329 files in other folders)
