cmake_minimum_required(VERSION 3.16)
project(04_bus_messaging_rk3588 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_SYSTEM_PROCESSOR aarch64)
set(CMAKE_C_COMPILER /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-gcc)
set(CMAKE_CXX_COMPILER /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-g++)
set(CMAKE_AR /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-ar)
set(CMAKE_LINKER /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-ld)
set(CMAKE_NM /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-nm)
set(CMAKE_OBJDUMP /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-objdump)
set(CMAKE_RANLIB /opt/FriendlyARM/toolchain/11.3-aarch64/bin/aarch64-cortexa53-linux-gnu-ranlib)
set(CMAKE_SYSROOT /opt/FriendlyARM/toolchain/11.3-aarch64/aarch64-cortexa53-linux-gnu/sysroot)
set(FALCONMIND_SDK_DIR "/home/shook/study/opencode/FalconMindSDK")
set(FALCONMIND_SDK_INSTALL "${FALCONMIND_SDK_DIR}/install/arm64")
set(FALCONMIND_SDK_INCLUDE "${FALCONMIND_SDK_INSTALL}/include")
set(FALCONMIND_SDK_LIB "${FALCONMIND_SDK_INSTALL}/lib/libfalconmind_sdk.a")
if(NOT EXISTS "${FALCONMIND_SDK_LIB}")
    message(FATAL_ERROR "FalconMindSDK arm64库未找到: ${FALCONMIND_SDK_LIB}")
endif()
set(SOURCES src/main.cpp)
add_executable(04_bus_messaging_rk3588 ${SOURCES})
target_include_directories(04_bus_messaging_rk3588 PRIVATE ${FALCONMIND_SDK_INCLUDE})
target_link_libraries(04_bus_messaging_rk3588 PRIVATE ${FALCONMIND_SDK_LIB} pthread)
target_compile_options(04_bus_messaging_rk3588 PRIVATE -Wall -Wextra -O3)
set(CMAKE_EXE_LINKER_FLAGS "-static")
message(STATUS "=== FalconMindSDK 示例04 RK3588平台配置 ===")
message(STATUS "  可执行文件: 04_bus_messaging_rk3588")
