cmake_minimum_required(VERSION 3.16)
project(06_rknn_yolo_inference_rv1126b LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
set(FALCONMIND_SDK_DIR "/home/shook/study/opencode/FalconMindSDK")
set(FALCONMIND_SDK_INSTALL "${FALCONMIND_SDK_DIR}/install/x86")
set(FALCONMIND_SDK_INCLUDE "${FALCONMIND_SDK_INSTALL}/include")
set(FALCONMIND_SDK_LIB "${FALCONMIND_SDK_INSTALL}/lib/libfalconmind_sdk.a")
if(NOT EXISTS "${FALCONMIND_SDK_LIB}")
    message(FATAL_ERROR "FalconMindSDK库未找到")
endif()
set(SOURCES src/main.cpp)
add_executable(06_rknn_yolo_inference_rv1126b ${SOURCES})
target_include_directories(06_rknn_yolo_inference_rv1126b PRIVATE ${FALCONMIND_SDK_INCLUDE})
target_link_libraries(06_rknn_yolo_inference_rv1126b PRIVATE ${FALCONMIND_SDK_LIB} pthread)
target_compile_options(06_rknn_yolo_inference_rv1126b PRIVATE -Wall -Wextra -O3)
message(STATUS "=== FalconMindSDK 示例06 x86平台配置 ===")
